# oci-hermes

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: repo-hygiene.yml  secret-scan.yml
deploy/caddy/: README.md
deploy/compose/: README.md  docker-compose.yml
deploy/compose/hermes-bridge/: Cargo.toml  Dockerfile  bridge.py
deploy/compose/hermes-bridge/src/: audit.rs  commands.rs  config.rs  lib.rs  main.rs  matrix_runtime.rs  ollama.rs  policy.rs
deploy/compose/hermes-bridge/tests/: audit_tests.rs  command_policy_tests.rs  config_tests.rs  ollama_tests.rs
deploy/systemd/: README.md  hermes-backup.service  hermes-backup.timer  hermes-compose.service  hermes-duckdns.service  hermes-duckdns.timer  hermes-restore-test.service
docs/operations/: provider-boundaries.md
docs/runbooks/: README.md  backup-restore.md  first-deployment.md  incident-response.md  matrix-e2ee.md  model-setup.md  teardown.md  update-review.md
infra/oci/: README.md  compute.tf  locals.tf  network.tf  outputs.tf  variables.tf  versions.tf
scripts/: README.md  check_repo_hygiene.py  hermesctl  hermesctl.py
scripts/lib/: __init__.py  config.py  constants.py  oci_checks.py  prompting.py  redaction.py  runner.py  ssh_ops.py  templates.py  validation.py
tests/: test_hermesctl_apply.py  test_prompting.py  test_redaction.py  test_repo_hygiene.py  test_runner.py  test_templates.py  test_validation.py
(+6 files in other folders)
